[tool.poetry]
name = "board-game-bot"
version = "0.1.2"
description = "Board game recommender bots 🤖"
authors = ["Markus Shepherd <markus@recommend.games>"]
license = "MIT"
readme = "README.md"
homepage = "https://recommend.games/"
repository = "https://gitlab.com/recommend.games/board-game-bot"
keywords = [
    "board games",
    "tabletop games",
    "bot",
    "twitter"
]
classifiers = [
    "Topic :: Games/Entertainment :: Board Games"
]

[tool.poetry.dependencies]
python = "^3.8"
board-game-utils = "^0.1.1"
pytility = "^0.3.0"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
ipython = "^7.23.1"
mypy = "^0.812"
pre-commit = "^2.12.1"
psutil = "^5.8.0"
pylint = "^2.8.2"
python-dotenv = "^0.17.1"
twine = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
